add healthchech and prometheus metrics